[gd_scene load_steps=3 format=3 uid="uid://b2y4xvjsf0ycs"]

[ext_resource type="Script" uid="uid://dosj7h4vqtmem" path="res://scripts/World.gd" id="1_oj0xl"]
[ext_resource type="Theme" uid="uid://d31vy5b8bcfsa" path="res://themes/main_theme.tres" id="2_theme"]

[node name="World" type="Node2D"]
script = ExtResource("1_oj0xl")

[node name="Background" type="ColorRect" parent="."]
z_index = -100
offset_left = -10000.0
offset_top = -10000.0
offset_right = 10000.0
offset_bottom = 10000.0
color = Color(0, 0, 0, 1)

[node name="AsciiTileMap" type="TileMap" parent="."]
format = 2

[node name="SpecialPoints" type="Node2D" parent="."]

[node name="PlayerCharacter" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
theme = ExtResource("2_theme")
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="Camera2D" type="Camera2D" parent="."]
